fix modal nonappering bug (z-index)

--- a/angular/src/app/app.component.css
+++ b/angular/src/app/app.component.css
@@ -32,6 +32,5 @@
   background-color: rgba(230, 230, 230, 0.205);
   /* To use z-index */
   position: relative;
-  z-index: 1;
   height: 100%;
 }
